1999-04-14  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-translate-buffer): Do `undo-boundary'
	before translating.

1999-04-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-mc.el (mime-mc-pgp50-sign-region, mime-mc-gpg-sign-region):
	Don't deactivate passwd during detecting the value of `micalg' even
	if `mc-passwd-timeout' is set to nil.
	(mime-mc-gpg-process-region): Print this function name for
	debugging.

1999-04-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-pgp.el (mime-pgp-check-signature): Return nil if neither bad
	nor good.

1999-04-09  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-mc.el (mime-mc-pgp-encrypt-region, mime-mc-pgp-sign-region,
	mime-mc-process-region, mime-mc-pgp50-encrypt-region,
	mime-mc-pgp50-sign-region, mime-mc-pgp50-process-region,
	mime-mc-gpg-encrypt-region, mime-mc-gpg-sign-region,
	mime-mc-gpg-process-region, mime-mc-insert-public-key): Identify
	the version of SEMI as a comment field of ASCII armor.
	(mime-mc-replace-comment-field): New function.
	(mime-mc-comment-alist): New user option.
	(TopLevel): Require `mime-def'.

1999-04-08  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-mc.el (mime-mc-pgp-sign-region): Omit the micalg parameter
	if the value of `mime-mc-omit-micalg' is non-nil.
	(mime-mc-pgp50-sign-region, mime-mc-gpg-sign-region): Detect and
	cache the value of message integrity check algorithm before signing
	and use it for the micalg parameter if the value of
	`mime-mc-omit-micalg' is nil.
	(mime-mc-gpg-process-region): Show boundary in
	`mc-gpg-debug-buffer'.
	(mime-mc-pgp-process-region, mime-mc-pgp50-process-region,
	mime-mc-gpg-process-region): Add doc string.
	(mime-mc-micalg-alist): New variable.
	(mime-mc-omit-micalg): New user option.
	(TopLevel): Require `alist' and `std11'.

	* mime-pgp.el (TopLevel): Add comment that this module is based on
	draft-yamamoto-openpgp-mime-00.txt (OpenPGP/MIME) as well.

1999-04-06  Katsumi Yamaoka   <yamaoka@jpl.org>
